<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.sftelehealth.doctor.app.view.viewmodel.LoginFragmentViewModel" />
        <variable
            name="listener"
            type="com.sftelehealth.doctor.app.listener.LoginListener"/>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context="com.sftelehealth.doctor.app.view.fragment.LoginFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/app_logo"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/logo" />

                    <com.traktion.doctor.app.view.custom.CustomFontTextView
                        android:id="@+id/corporateName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-52dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="32sp" />

                </LinearLayout>

                <!--<ImageView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="36dp"
                    android:src="@drawable/logo"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:layout_above="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="60dp"/>-->

                <com.traktion.doctor.app.view.custom.CustomFontTextView
                    android:id="@+id/header_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/verify_instruction"
                    android:textSize="@dimen/text_14" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.traktion.doctor.app.view.custom.CustomFontEditText
                        android:id="@+id/phone"
                        style="@style/EditText.General"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="48dp"
                        android:paddingRight="12dp"
                        android:inputType="phone"
                        android:background="@drawable/box_edittext"
                        android:hint="@string/phone_hint"
                        android:text="@={viewmodel.phoneNumber}" />

                    <com.traktion.doctor.app.view.custom.CustomFontTextView
                        style="@style/TextAppearance.Prefix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_alignLeft="@id/phone"
                        android:layout_alignStart="@id/phone"
                        android:text="@string/phone_prefix" />

                </RelativeLayout>

                <com.traktion.doctor.app.view.custom.CustomButton
                    android:id="@+id/verify_btn"
                    style="@style/ButtonAppearance.General"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="@{(verifyButtonView) -> listener.login(verifyButtonView)}"
                    android:text="@string/verify_btn" />

                <com.traktion.doctor.app.view.custom.CustomFontTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/tnc_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_text" />

                <com.traktion.doctor.app.view.custom.CustomFontTextView
                    android:id="@+id/termsandconditions"
                    style="@style/TextAppearance.Hyperlink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> listener.viewTermsAndConditions()}"
                    android:text="@string/tnc"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_text" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/splash_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <!-- android:background="@drawable/screen" -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/logo"/>

                    <com.traktion.doctor.app.view.custom.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-52dp"
                        android:textSize="32sp"
                        android:textColor="@color/colorPrimary"
                        app:fontName="bold"
                        android:text="@string/app_name"
                        style="@style/TextAppearance.Heading"/>

                </LinearLayout>

            </RelativeLayout>

        </FrameLayout>

    </ScrollView>
</layout>