...

    <!-- Registration Activity -->
    <string name="verify_header">Verify Your Number</string>
    <string name="verify_instruction">Please verify your mobile number</string>
    <string name="phone_hint">Mobile Number</string>
    <string name="phone_prefix">+91</string>
    <string name="verify_btn">Verify</string>
    <string name="tnc_text">By verifying your number you agree to the</string>
    <string name="tnc">Terms &amp; Conditions</string>

    <!-- Verification activity -->
    <string name="verification_instruction">Wait while we try to fetch the verification code sent through SMS, or enter it manually</string>
    <string name="verification_hint">6 digit code</string>
...
